# OpenFAM

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NEWS.md  README.md  VERSION  build_and_test.sh  openfam_adm_install.cmake  run_test.cmake  run_test.py  run_test.sh
examples/api/: CMakeLists.txt  README.md  api_fam_add.cpp  api_fam_allocate.cpp  api_fam_allocate_deallocate.cpp  api_fam_and.cpp  api_fam_backup.cpp  api_fam_change_permission.cpp  api_fam_compare_swap.cpp  api_fam_context.cpp  api_fam_copy.cpp  api_fam_create_destroy_region.cpp  api_fam_create_region.cpp  api_fam_deallocate.cpp  api_fam_delete_backup.cpp  api_fam_destroy_region.cpp  api_fam_fence.cpp  api_fam_fetch.cpp  api_fam_fetch_add.cpp  api_fam_fetch_and.cpp  api_fam_fetch_max.cpp  api_fam_fetch_min.cpp  api_fam_fetch_or.cpp  api_fam_fetch_subtract.cpp  api_fam_fetch_xor.cpp  api_fam_gather.cpp  api_fam_get_blocking.cpp  api_fam_get_nonblocking.cpp  api_fam_get_option.cpp  api_fam_initialze.cpp  api_fam_list_options.cpp  api_fam_lookup.cpp  api_fam_map.cpp  api_fam_max.cpp  api_fam_min.cpp  api_fam_or.cpp  api_fam_progress.cpp  api_fam_put_blocking.cpp  api_fam_quiet.cpp  api_fam_resize_region.cpp  (+6 more)
src/: CMakeLists.txt
src/allocator/: CMakeLists.txt  NVMM_counters.tbl  fam_allocator.h  fam_allocator_client.cpp  fam_allocator_client.h  fam_allocator_grpc.cpp  fam_allocator_grpc.h  fam_allocator_nvmm.cpp  fam_allocator_nvmm.h  fam_client_resource_manager.cpp  fam_client_resource_manager.h  memserver_allocator.cpp  memserver_allocator.h  rbtree.c  rbtree.h
src/bitmap-manager/: CMakeLists.txt  bitmap.cpp  bitmap.h
src/cis/: CMakeLists.txt  cis_async_counters.tbl  cis_direct_counters.tbl  cis_server_counters.tbl  cis_thallium_async_counters.tbl  cis_thallium_server_counters.tbl  fam_cis.h  fam_cis_async_handler.h  fam_cis_client.cpp  fam_cis_client.h  fam_cis_direct.cpp  fam_cis_direct.h  fam_cis_rpc.proto  fam_cis_server.cpp  fam_cis_server.h  fam_cis_thallium_client.cpp  fam_cis_thallium_client.h  fam_cis_thallium_rpc_structures.h  fam_cis_thallium_server.cpp  fam_cis_thallium_server.h
src/common/: CMakeLists.txt  MEMSERVER_counters.tbl  atomic_queue.cpp  atomic_queue.h  c_api.cpp  fam_async_qhandler.cpp  fam_async_qhandler.h  fam_config_info.cpp  fam_config_info.h  fam_context.cpp  fam_context.h  fam_exception.cpp  fam_internal.h  fam_internal_exception.cpp  fam_internal_exception.h  fam_libfabric.cpp  fam_libfabric.h  fam_memserver_profile.h  fam_ops.h  fam_ops_libfabric.h  fam_ops_nvmm.h  fam_ops_shm.h  fam_options.h  fam_thallium_engine_helper.cpp  fam_thallium_engine_helper.h  fam_util_atomic.h  libfabric_counters.tbl  memserver_exception.cpp  memserver_exception.h  yaml_config_info.h
src/fam-api/: CMakeLists.txt  fam.cpp  fam_counters.h  fam_counters.tbl  fam_descriptor.cpp  fam_ops_libfabric.cpp  fam_ops_nvmm.cpp  fam_ops_shm.cpp
src/memory-node/: CMakeLists.txt  cis_server_main.cpp  memory_server_main.cpp  metadata_server_main.cpp
src/memory_service/: CMakeLists.txt  fam_memory_registration.h  fam_memory_registration_libfabric.cpp  fam_memory_registration_libfabric.h  fam_memory_registration_shm.h  fam_memory_service.h  fam_memory_service_client.cpp  fam_memory_service_client.h  fam_memory_service_direct.cpp  fam_memory_service_direct.h  fam_memory_service_rpc.proto  fam_memory_service_server.cpp  fam_memory_service_server.h  fam_memory_service_thallium_client.cpp  fam_memory_service_thallium_client.h  fam_memory_service_thallium_rpc_structures.h  fam_memory_service_thallium_server.cpp  fam_memory_service_thallium_server.h  fam_server_resource_manager.cpp  fam_server_resource_manager.h  memory_reg_fabric_counters.tbl  memory_service_client_counters.tbl  memory_service_direct_counters.tbl  memory_service_server_counters.tbl  memory_service_thallium_client_counters.tbl  memory_service_thallium_server_counters.tbl
src/metadata/: CMakeLists.txt  fam_metadata_manager.cpp  fam_metadata_manager.h  fam_metadata_manager_client.cpp  fam_metadata_manager_client.h  fam_metadata_manager_direct.cpp  fam_metadata_manager_direct.h  fam_metadata_manager_server.cpp  fam_metadata_manager_server.h  fam_metadata_rpc.proto  fam_metadata_service.h  fam_metadata_service_client.cpp  fam_metadata_service_client.h  fam_metadata_service_direct.cpp  fam_metadata_service_direct.h  fam_metadata_service_server.cpp  fam_metadata_service_server.h  metadata_client_counters.tbl  metadata_counters.tbl  metadata_server_counters.tbl
src/metadata_service/: CMakeLists.txt  fam_metadata_rpc.proto  fam_metadata_service.h  fam_metadata_service_client.cpp  fam_metadata_service_client.h  fam_metadata_service_direct.cpp  fam_metadata_service_direct.h  fam_metadata_service_server.cpp  fam_metadata_service_server.h  fam_metadata_service_thallium_client.cpp  fam_metadata_service_thallium_client.h  fam_metadata_service_thallium_rpc_structures.h  fam_metadata_service_thallium_server.cpp  fam_metadata_service_thallium_server.h  metadata_client_counters.tbl  metadata_direct_counters.tbl  metadata_server_counters.tbl  metadata_thallium_client_counters.tbl  metadata_thallium_server_counters.tbl
src/pmi/: fam_runtime.h  runtime_pmi2.h  runtime_pmix.h
src/rpc/: CMakeLists.txt  fam_rpc.proto  fam_rpc_client.h  fam_rpc_server.h  fam_rpc_service_impl.cpp  fam_rpc_service_impl.h  rpc_server_counters.tbl  rpc_service_counters.tbl
test/apps/spmv/: CMakeLists.txt  Readme.md  config_3_4_1  csr_perload.cpp  fam_dump_dataitem.cpp  fam_spmv.cpp  fam_spmv.h  fam_spmv_multi_atomic.cpp
test/multi-memnode-test/: CMakeLists.txt  README.md  fam_datapath_for_memnode_regions.cpp  fam_datapath_for_random_regions.cpp  fam_microbenchmark_atomic_multiple_memnodes.cpp  fam_microbenchmark_datapath_multiple_memnodes.cpp  fam_multi_memnode_tests.cpp
test/permission-test/fam-mm-permission-multi-user/: CMakeLists.txt  fam_allocate_data.cpp  fam_backup_data.cpp  fam_create_region.cpp  (+26 more)
test/services-test/: CMakeLists.txt  multi_mem_persistent.txt.in  multi_mem_volatile.txt.in  region_create_volatile_persistent.sh  test_fam_create_region.cpp
(+243 files in other folders)
